<resources>
    <string name="app_name">Student Data SQLiteDB</string>
    <string name="wellcome_in_student_data_sqlitedb">Wellcome in Student Data SQLiteDB</string>
    <string name="add_data">Add Data</string>
    <string name="view_data">View Data</string>
    <string name="edit_data">Edit Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="add_student_data">Add Student Data</string>
    <string name="roll_number">Roll Number</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_roll_number">Select Roll Number</string>
    <string name="update_data">Update Data</string>
</resources>
